# adaptnn

./: README.md  pyproject.toml  setup.cfg  simpleContrastGainSimulation.ipynb  test3DDataset.ipynb  testLayer.ipynb  test_simple_rgc.ipynb  test_simple_rgc_spatiotemporal.ipynb
src/adaptnn/: adaptive_layers.py  artificial_datasets.py  model_fitting.py  retina_datasets.py  utils.py  visual_neuron_convnets.py
